<resources>
    <string name="app_name">Nexus</string>
    <string name="enter_your_email">Enter your email.......</string>
    <string name="Title">Social Nexus</string>
    <string name="welcome_message">Your all-in-one social media dashboard for seamless management and growth.</string>
    <string name="Login_btn">Login</string>
    <string name="Welcome_btn">Get started</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="logintext">Don\'t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="pass">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="social_nexus">SOCIAL NEXUS</string>
    <string name="your_all_in_one_social_media_dashboard_for_seamless_management_and_growth">Your all-in-one social media dashboard for seamless management and growth.</string>
    <string name="get_started">Get Started</string>
    <string name="enable_comments_notification">Enable Comments Notification</string>
    <string name="enable_messages_notification">Enable Messages Notification</string>
    <string name="enable_follower_growth_notification">Enable Follower Growth Notification</string>
    <string name="save_settings">Save Settings</string>
    <string name="notification_preferences">Notification Preferences</string>
    <string name="add_new_account">Add New Account</string>
    <string name="account_management">Account Management</string>
    <string name="setting_option">Setting Option</string>
    <string name="log_out">Log out</string>
    <string name="hale_kit">Hale Kit 👋</string>
    <string name="hiring_some_salesmen">Hiring some salesmen</string>
    <string name="_1_november_at_12_00pm">1 November, at 12:00pm</string>
    <string name="_14_5k">14.5K</string>
    <string name="_26_87">26.87%</string>
    <string name="Hiring_some_salesmen" />
    <string name="today_10_30_am">Today, 10:30 AM</string>
    <string name="scheduled_posts">Scheduled Posts</string>
    <string name="followers_growth">Followers Growth</string>
    <string name="tabby">26.87%</string>
    <string name="Tabu">14.5K</string>
    <string name="comments">Comments</string>
    <string name="likes">Likes</string>
    <string name="taoo">26.87%</string>
    <string name="tabb">14.5K</string>
</resources>