<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="#EDE7F6"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center"
        android:text="@string/Login_btn"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/irishgrover"
        android:layout_marginBottom="24dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="16dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:layout_margin="12dp"
            android:background="@drawable/edit_border"
            android:padding="12dp"
            android:layout_marginBottom="16dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="16dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:layout_margin="12dp"
            android:background="@drawable/edit_border"
            android:padding="12dp"
            android:layout_marginBottom="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_btn"
        android:backgroundTint="#A46FDC"
        android:textColor="@color/white"
        android:background="@drawable/border"
        android:padding="12dp"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:elevation="6dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logintext"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="12dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"/>

    <Button
        android:id="@+id/signup_btn"
        android:text="@string/signup"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:backgroundTint="#7633BD"
        android:padding="12dp"
        android:elevation="6dp"
        android:layout_margin="12dp"/>
</LinearLayout>